--- a/views/user-page.pug
+++ b/views/user-page.pug
@@ -10,9 +10,9 @@ block content
     body
         div(class="header")
             h1(class="user-name") #{user.firstName} #{user.lastName}
-            h4(class="user-follows") 9 Followers
-            button(class="user-follow-button") Follow
-            h4(class="user-about") About
+            div(class="follow-info")
+                h4(class="user-follows") 9 Followers
+                button(class="user-follow-button") Follow
         div(class="articles")
             each article in articles
                 h1=article.title
