--- a/views/article-single.pug
+++ b/views/article-single.pug
@@ -27,12 +27,14 @@ block content
           span(id="like-count") #{likeCount}
           p <i class="far fa-comment-dots comment-button"></i>
           div(class='newcomment hidden')  
+    if session.auth
+      if (session.auth.userId == article.userId)
+        div(class="edit-article-button")
+          a(href=`/articles/${article.id}/edit` class="heroButton editArticle edit-article-button") Edit Poem
     div(class='comments')
       each comment in comments
         div(class='commentsdiv')
           p(class='commentbody')=comment.body 
           p(class='commentauthor')=comment.userName
           span(class='commentdate')='' + moment(comment.createdAt).format("MM/DD/YYYY") + ''
-    if session.auth
-      if (session.auth.userId == article.userId)
-        a(href=`/articles/${article.id}/edit` class="heroButton editArticle") Edit Poem
+  script(src="/javascripts/index.js")
