--- a/views/index.pug
+++ b/views/index.pug
@@ -5,15 +5,23 @@ append head
   link(rel="stylesheet" href="/stylesheets/index.css")
   link(rel="stylesheet" href="/stylesheets/trending.css")
   //- add page specific js
-  script(src="/javascripts/index.js" type="module" defer)
+  //- script(src="/javascripts/index.js" type="module" defer)
 
 block content
   div(class="hero")
 
-    h1 Where good ideas find you
-    p Read and share new perspectives on just about any topic. Everyone’s welcome.
-    a(href='/users/new' class="heroButton") Get Started
+    h1 Where good poems find you
+    p Read and share you're favorite poems with the world. Everyone’s welcome.
+    if !session.auth
+      a(href='/users/new' class="heroButton") Get Started
   div(class="trending container") 
+    if following
+      h2(class="trending-title") <i class="fas fa-user-friends"></i> LATEST FROM FOLLOWING
+      div(class="articles-div mb-40")
+        each follow in following
+          div(class="trending-article-box")
+               a(href=`/users/${follow.User.id}` class="trending-article-name following-name") #{follow.User.userName}
+          //- p=follow.User.userName
     h2(class="trending-title") <i class="far fa-arrow-alt-circle-down"></i> TRENDING ON POEDIUM
       div(class="articles-div")
         each article in articles
