--- a/views/article-single.pug
+++ b/views/article-single.pug
@@ -13,7 +13,8 @@ block content
       a(class='article-author-single' href=`/users/${article.User.id}`) #{article.User.firstName} #{article.User.lastName}
       span(class='article-author-single-date')='' + moment(article.createdAt).format("DD/MM/YYYY") + ''
     
-    p(class='article-body-single')= article.body
+    p(style='margin-left: 50px')
+      pre(class='article-body-single')= article.body
     
     if (session.auth)
       if (isLiked)
@@ -39,11 +40,6 @@ block content
         span(id="like-count") #{likeCount}
         p <i class="far fa-comment-dots comment-button"></i>
         span(id="comment-count") #{commentCount}
-    
-    if session.auth
-      if (session.auth.userId == article.userId)
-        div(class="edit-article-button")
-          a(href=`/articles/${article.id}/edit` class="heroButton editArticle edit-article-button") Edit Poem
     
     div(class='comments')
       each comment in comments
