--- a/views/layout.pug
+++ b/views/layout.pug
@@ -43,3 +43,20 @@ html
     //- script(src="/javascripts/index.js")
             
     block content
+
+    div(class='footer')
+      div(class='flex-footer')
+        a(href=`mailto:mikethecodegeek@gmail.com`) Mike Sanford
+        a(href='https://github.com/mikethecodegeek') <i class="fab fa-github"></i>
+        a(href='https://www.linkedin.com/in/michael-sanford-1180b3115/') <i class="fab fa-linkedin"></i>
+
+      div(class='flex-footer')
+        a(href=`mailto:tannerschmutte@gmail.com`) Tanner Schmutte
+        a(href='https://github.com/tanner-schmutte') <i class="fab fa-github"></i>
+        a(href='https://www.linkedin.com/in/tannman/') <i class="fab fa-linkedin"></i>
+      
+      div(class='flex-footer')
+        a(href=`mailto:nikhilmenon1234@gmail.com`) Nick Menon
+        a(href='https://github.com/nikhilmenon2') <i class="fab fa-github"></i>
+        a(href='https://www.linkedin.com/in/nickmenon/') <i class="fab fa-linkedin"></i>
+     
