--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,24 +3,19 @@ html
   head
       <title>Poedium</title>
       <meta name="title" content="Poedium">
-      <meta name="description"
-        content="A Community for Poets">
+      <meta name="description" content="A Community for Poets">
       <!-- Open Graph / Facebook -->
       <meta property="og:type" content="website">
       <meta property="og:url" content="https://poedium.herokuapp.com/">
-      <meta property="og:title" content="Poedium"">
-      <meta property="og:description"
-        content="A Community for Poets">
-      <meta property="og:image"
-        content="images/view.png">
+      <meta property="og:title" content="Poedium">
+      <meta property="og:description" content="A Community for Poets">
+      <meta property="og:image" content="images/view.png">
       <!-- Twitter -->
       <meta property="twitter:card" content="summary_large_image">
       <meta property="twitter:url" content="https://poedium.herokuapp.com/">
-      <meta property="twitter:title" content="Poedium"">
-      <meta property="twitter:description"
-        content="A Community for Poets">
-      <meta property="twitter:image"
-        content="images/view.png">
+      <meta property="twitter:title" content="Poedium">
+      <meta property="twitter:description" content="A Community for Poets">
+      <meta property="twitter:image" content="images/view.png">
 
       block head
         title="Poedium"
