some links updated with meta tags

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,5 +1,5 @@
 doctype html
-html
+<html lang='en' prefix='og: http://ogp.me/ns#'>
   head
       <title>Poedium</title>
       <meta name="title" content="Poedium">
@@ -9,13 +9,13 @@ html
       <meta property="og:url" content="https://poedium.herokuapp.com/">
       <meta property="og:title" content="Poedium">
       <meta property="og:description" content="A Community for Poets">
-      <meta property="og:image" content="images/view.png">
+      <meta property="og:image" content="https://i.imgur.com/WhGBpfw.png">
       <!-- Twitter -->
       <meta property="twitter:card" content="summary_large_image">
       <meta property="twitter:url" content="https://poedium.herokuapp.com/">
       <meta property="twitter:title" content="Poedium">
       <meta property="twitter:description" content="A Community for Poets">
-      <meta property="twitter:image" content="images/view.png">
+      <meta property="twitter:image" content="https://i.imgur.com/WhGBpfw.png">
 
       block head
         title="Poedium"
