modal closes properly

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -62,7 +62,7 @@ doctype html
 
     div(class='footer')
       div(class='flex-footer')
-        a(href=`mailto:mikethecodegeek@gmail.com`) Mike Sanford
+        a(href=`http://michaelsanford.me`) Mike Sanford
         a(href='https://github.com/mikethecodegeek') <i class="fab fa-github"></i>
         a(href='https://www.linkedin.com/in/michael-sanford-1180b3115/') <i class="fab fa-linkedin"></i>
 
