--- a/views/signup.pug
+++ b/views/signup.pug
@@ -34,3 +34,4 @@ block content
             input(class="modalInput" type="password" name="confirmPassword" placeholder="Confirm Password")
             br
             button(class="modalSubmit" type="submit" value='Submit') Submit
+  script(src="/javascripts/modal.js")
