--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -62,8 +62,7 @@ div {
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
+  
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
@@ -78,6 +77,7 @@ div {
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+    max-width: 400px;
 }
 
 .modalTitle {
