--- a/views/login.pug
+++ b/views/login.pug
@@ -1,6 +1,8 @@
 extends layout
 block content 
+ 
   div(id="myModal" class="modal")
+  
       div(class="modal-content")
         p
           a(href="/" class="modalClose") X 
@@ -19,3 +21,14 @@ block content
             input(class="modalInput" type="password" name="password" placeholder="Enter Password" id="password")
             br
             button(class="modalSubmit" type="submit" value='Submit') Submit
+        form(method="post" action="/users/login")
+          input(type="hidden" name="_csrf" value=csrfToken)
+          //- label(for="userName") Enter A Username
+          div(class="modalInputFields")
+            input(type='hidden' name='userName' value='Demo_User')
+            input(type='hidden' name='password' value="password")
+            button(class="modalSubmit" type="submit" value='Submit') Demo User
+           
+  script(src="/javascripts/modal.js")            
+            
+
