--- a/views/index.pug
+++ b/views/index.pug
@@ -14,6 +14,8 @@ block content
     p Read and share you're favorite poems with the world. Everyone’s welcome.
     if !session.auth
       a(href='/users/new' class="heroButton") Get Started
+  div(class='img-cont')
+    img(class= 'poe-quote' src='../images/poe-quote.jpg')    
   div(class="trending container") 
     if following
       h2(class="trending-title") <i class="fas fa-user-friends"></i> LATEST FROM FOLLOWING
@@ -23,11 +25,12 @@ block content
                a(href=`/users/${follow.User.id}` class="trending-article-name following-name") #{follow.User.userName}
           //- p=follow.User.userName
     h2(class="trending-title") <i class="far fa-arrow-alt-circle-down"></i> TRENDING ON POEDIUM
+    div(class='articles-cont')
       div(class="articles-div")
         each article,i in articles
           div(class="trending-article")
             p(class="number") 0#{i+1}
             div(class="trending-article-box")
-               a(href=`/users/${article.User.id}` class="trending-article-name") #{article.User.firstName} #{article.User.lastName}
-               a(href=`/articles/${article.id}` class="trending-article-title")=article.title
-               p(class="trending-article-date") Dec 7 · #{article.id} min read
+              a(href=`/users/${article.User.id}` class="trending-article-name") #{article.User.firstName} #{article.User.lastName}
+              a(href=`/articles/${article.id}` class="trending-article-title")=article.title
+              p(class="trending-article-date") Dec 7 · #{article.id} min read
