--- a/public/stylesheets/trending.css
+++ b/public/stylesheets/trending.css
@@ -4,6 +4,7 @@ a {
 
 .trending {
     margin-top: 0px;
+    margin-bottom: 50px;
 }
 
 .container {
@@ -13,6 +14,7 @@ a {
 .trending-title {
     font-weight: bold;
     font-size: 0.8rem;
+    text-align: center;
 }
 
 .articles-div {
@@ -23,7 +25,9 @@ a {
 
 .trending-article {
     display: flex;
+    
 }
+
 
 .number {
     margin-top: 0px;
