--- a/views/article-single.pug
+++ b/views/article-single.pug
@@ -13,7 +13,7 @@ block content
       a(class='article-author-single' href=`/users/${article.User.id}`) #{article.User.firstName} #{article.User.lastName}
       span(class='article-author-single-date')='' + moment(article.createdAt).format("DD/MM/YYYY") + ''
     
-    p(style='margin-left: 50px')
+    div
       pre(class='article-body-single')= article.body
     
     if (session.auth)
