--- a/views/layout.pug
+++ b/views/layout.pug
@@ -59,7 +59,7 @@ doctype html
     //- script(src="/javascripts/index.js")
             
     block content
-
+    div(class='break')
     div(class='footer')
       div(class='flex-footer')
         a(href=`http://michaelsanford.me`) Mike Sanford
