--- a/views/user-page.pug
+++ b/views/user-page.pug
@@ -7,7 +7,8 @@ block content
                 span(class="numFollows") #{numFollows} 
                 span Followers
         //- h4(class="user-about") About
-        if session.auth
+        if session.auth 
+          if user.id !== session.auth.userId
             if isFollowing
                 button(class="user-unfollow-button" id=user.id) Following
                 button(class="user-follow-button hidden" id=user.id) Follow
@@ -17,10 +18,10 @@ block content
             div(class='hidden userId' id=session.auth.userId)
     div(class="articles")
         each article in articles
-            div(class="article")
+            div(class="article" )
                 h1
                     a(href=`/articles/${article.id}` class="article-title-multi")=article.title
-                p(class="article-body-single")=article.body.substr(0, 300) + '...'
+                p(class="article-body-single align-left")=article.body.substr(0, 300) + '...'
                 div(class="mb-40")
                   a(class= 'read-more' href=`/articles/${article.id}`) Read More
                 if session.auth
