too many seeds for heroku free plan, added portfolio link

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -63,7 +63,7 @@ doctype html
     div(class='break')
     div(class='footer')
       div(class='flex-footer')
-        a(href=`http://michaelsanford.me`) Mike Sanford
+        a(target="_blank" href=`http://michaelsanford.me`) Mike Sanford
         a(href='https://github.com/mikethecodegeek') <i class="fab fa-github"></i>
         a(href='https://www.linkedin.com/in/michael-sanford-1180b3115/') <i class="fab fa-linkedin"></i>
 
@@ -73,7 +73,7 @@ doctype html
         a(href='https://www.linkedin.com/in/tannman/') <i class="fab fa-linkedin"></i>
       
       div(class='flex-footer')
-        a(href=`mailto:nikhilmenon1234@gmail.com`) Nick Menon
+        a(target="_blank" href=`https://nickmenon.com/`) Nick Menon
         a(href='https://github.com/nikhilmenon2') <i class="fab fa-github"></i>
         a(href='https://www.linkedin.com/in/nickmenon/') <i class="fab fa-linkedin"></i>
      
